# hello_world

./: .editorconfig  .env-sample  .gitignore  .pre-commit-config.yaml  Makefile  README.rst  cliff.toml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: auto-doc.yml  auto-tag.yml  base-release.yml  ci.yml  notification.yml  publish.yml  pull-request-auto-assign.yml  pull-request-notification.yml  release.yml  sync-pypi.yml
docs/: run.py
docs/source/: changelog.rst  conf.py  index.rst  theme_config.py
docs/source/_static/: custom.css
docs/source/development/: commit.rst  dependencies.rst  documentation.rst  index.rst  release.rst  versioning.rst
docs/source/hello_world/: main.rst
hello_world/: __init__.py  main.py
scripts/: current_version_is_pre_release.py
tests/: test_main.py
